# my-edu.opengl

./: README.md
learnOpenGL/: CMakeLists.txt
learnOpenGL/include/glad/: glad.h
learnOpenGL/src/: glad.c  main.cpp
